[package]
name = "vimwikid"
version = "0.1.0"
authors = ["Chip Senkbeil <chip@senkbeil.org>"]
edition = "2018"

[dependencies]
clap = "3.0.0-beta.1"
derive_more = { version = "0.99.0", default-features = false, features = ["display", "error", "from"]}
nom = "5.1.2"
notify = "5.0.0-pre.3"
juniper = "0.14.2"
juniper_warp = "0.5.2"
tokio = { version = "0.2.22", features = ["rt-core", "time", "io-std", "io-util", "macros"] }
warp = "0.2.4"
