[package]
name = "vimwikid"
version = "0.1.0"
authors = ["Chip Senkbeil <chip@senkbeil.org>"]
edition = "2018"

[lib]
name = "vimwikid"
path = "src/lib.rs"

[[bin]]
name = "vimwikid"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.15", features = ["serde"] }
clap = "3.0.0-beta.1"
nom = "5.1.2"
notify = "5.0.0-pre.3"
juniper = "0.14.2"
juniper_warp = "0.5.2"
petgraph = { version = "0.5.1", default-features = false, features = ["serde-1"] }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
tokio = { version = "0.2.22", features = ["rt-core", "time", "io-std", "io-util", "macros"] }
url = { version = "2.1.1", features = ["serde"] }
warp = "0.2.4"

[dependencies.derive_more]
version = "0.99.0"
default-features = false
features = [
    "constructor",
    "deref",
    "deref_mut",
    "display",
    "error",
    "from",
    "index",
    "index_mut",
    "into",
    "into_iterator"
]
