[package]
name = "vimwiki-cli"
description = "Comand-line interface for vimwiki operations"
categories = ["command-line-utilities"]
version = "0.1.0"
authors = ["Chip Senkbeil <chip@senkbeil.org>"]
edition = "2018"
homepage = "https://github.com/chipsenkbeil/vimwiki-rs"
repository = "https://github.com/chipsenkbeil/vimwiki-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"

[[bin]]
name = "vimwiki"
path = "src/main.rs"

[dependencies]
log = "0.4.14"
serde_json = "1.0.64"
shellexpand = "2.1.0"
stderrlog = "0.5.1"
structopt = "0.3.21"
toml = "0.5.8"
walkdir = "2.3.2"

vimwiki = { version = "=0.1.0", path = "../vimwiki", features = ["html"] }
