[package]
name = "vimwiki-cli"
description = "Comand-line interface for vimwiki operations"
categories = ["command-line-utilities"]
version = "0.1.1"
authors = ["Chip Senkbeil <chip@senkbeil.org>"]
edition = "2018"
homepage = "https://github.com/chipsenkbeil/vimwiki-rs"
repository = "https://github.com/chipsenkbeil/vimwiki-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"

[features]
default = []
timekeeper = ["vimwiki/timekeeper"]

[[bin]]
name = "vimwiki"
path = "src/main.rs"

[dependencies]
directories = "3.0.2"
jsonpath_lib = "0.2.6"
lazy_static = "1.4.0"
log = "0.4.14"
serde = "1.0.126"
serde_json = "1.0.64"
sha-1 = "0.9.6"
shellexpand = "2.1.0"
stderrlog = "0.5.1"
structopt = "0.3.21"
tantivy = "0.17.0"
toml = "0.5.8"
walkdir = "2.3.2"
vimvar = "0.3"
vimwiki = { version = "=0.1.1", path = "../vimwiki", features = ["html"] }

[dev-dependencies]
indoc = "1.0.4"
tempfile = "3.3.0"
