[package]
name = "vimwiki-core"
description = "Core library elements for vimwiki data structures, parsing, and more"
categories = ["parser-implementations", "template-engine"]
version = "0.1.0"
authors = ["Chip Senkbeil <chip@senkbeil.org>"]
edition = "2018"
homepage = "https://github.com/chipsenkbeil/vimwiki-rs"
repository = "https://github.com/chipsenkbeil/vimwiki-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"

[features]
default = []
html = ["dirs", "relative-path", "shellexpand", "syntect", "voca_rs"]
timekeeper = []

[[bench]]
name = "vimwiki_parser"
harness = false

[dependencies.derive_more]
version = "0.99.14"
default-features = false
features = [
    "as_mut",
    "as_ref",
    "constructor",
    "deref",
    "deref_mut",
    "display",
    "error",
    "from",
    "index",
    "index_mut",
    "into",
    "into_iterator",
    "is_variant",
    "try_into",
]

[dependencies]
bytecount = "0.6.0"
chrono = { version = "0.4.15", features = ["serde"] }
lazy_static = "1.4"
memchr = "2.3.3"
nom = "6.1.2"
numerals = "0.1.4"
percent-encoding = "2.1.0"
serde = { version = "1.0.115", features = ["derive"] }
serde_with = "1.9.1"
uriparse = { version = "0.6.3", features = ["serde"] }

### HTML-only features ###

# For acquiring the home directory
dirs = { version = "3.0.2", optional = true }

# For support in calculating relative link urls
relative-path = { version = "1.4.0", optional = true }

# For translating ~/blah/blah and other paths into complete paths
shellexpand = { version = "2.1.0", optional = true }

# For server-side rendering of code blocks in HTML
# NOTE: Using default-fancy so we can compile via webassembly elsewhere
syntect = { version = "4.5.0", optional = true, default-features = false, features = ["default-fancy"] }

# For safe HTML escaping
voca_rs = { version = "1.13.0", optional = true }

[dev-dependencies]
criterion = "0.3.3"
indoc = "1.0.2"
vimwiki = { version = "=0.1.0", path = "../vimwiki", features = ["macros"] }
