[package]
name = "vimwiki"
description = "Library that provides support to parse, generate, and manipulate vimwiki langauge."
categories = ["parser-implementations", "template-engine"]
version = "0.1.0-alpha.5"
authors = ["Chip Senkbeil <chip@senkbeil.org>"]
edition = "2018"
homepage = "https://github.com/chipsenkbeil/vimwiki-server"
repository = "https://github.com/chipsenkbeil/vimwiki-server"
readme = "README.md"
license = "MIT OR Apache-2.0"

[features]
default = []
location = []
timekeeper = []

[[bench]]
name = "vimwiki_parser"
harness = false

[dependencies]
bytecount = "0.6.0"
chrono = { version = "0.4.15", features = ["serde"] }
lazy_static = "1.4"
memchr = "2.3.3"
nom = "5.1.2"
numerals = "0.1.4"
serde = { version = "1.0.115", features = ["derive"] }
# shellexpand = "2.0.0"
uriparse = { version = "0.6.3", features = ["serde"] }

[dependencies.derive_more]
version = "0.99.0"
default-features = false
features = [
    "as_mut",
    "as_ref",
    "constructor",
    "deref",
    "deref_mut",
    "display",
    "error",
    "from",
    "index",
    "index_mut",
    "into",
    "into_iterator",
    "try_into",
]

[dev-dependencies]
criterion = "0.3.3"
indoc = "1.0.2"
vimwiki_macros = { version = "0.1.0-alpha.4", path = "../vimwiki_macros" }
