[package]
name = "vimwiki"
description = "Library that provides support to parse, generate, and manipulate vimwiki language."
categories = ["parser-implementations", "template-engine"]
version = "0.1.0-alpha.6"
authors = ["Chip Senkbeil <chip@senkbeil.org>"]
edition = "2018"
homepage = "https://github.com/chipsenkbeil/vimwiki-rs"
repository = "https://github.com/chipsenkbeil/vimwiki-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"

[features]
default = []
html = ["derive_builder", "dirs", "syntect", "voca_rs"]
timekeeper = []

[[bench]]
name = "vimwiki_parser"
harness = false

[dependencies]
bytecount = "0.6.0"
chrono = { version = "0.4.15", features = ["serde"] }
lazy_static = "1.4"
memchr = "2.3.3"
nom = "6.1.2"
numerals = "0.1.4"
serde = { version = "1.0.115", features = ["derive"] }
uriparse = { version = "0.6.3", features = ["serde"] }

### HTML-only features ###

# For easy building of HTML config structs
derive_builder = { version = "0.10.2", optional = true }

# For acquiring the home directory
dirs = { version = "3.0.2", optional = true }

# For server-side rendering of code blocks in HTML
syntect = { version = "4.5.0", optional = true }

# For safe HTML escaping
voca_rs = { version = "1.13.0", optional = true }

[dependencies.derive_more]
version = "0.99.0"
default-features = false
features = [
    "as_mut",
    "as_ref",
    "constructor",
    "deref",
    "deref_mut",
    "display",
    "error",
    "from",
    "index",
    "index_mut",
    "into",
    "into_iterator",
    "try_into",
]

[dev-dependencies]
criterion = "0.3.3"
indoc = "1.0.2"
vimwiki_macros = { version = "0.1.0-alpha.6", path = "../vimwiki_macros" }
