[package]
name = "vimwiki"
description = "Library that provides support to parse, generate, and manipulate vimwiki language."
categories = ["parser-implementations", "template-engine"]
version = "0.1.0"
authors = ["Chip Senkbeil <chip@senkbeil.org>"]
edition = "2018"
homepage = "https://github.com/chipsenkbeil/vimwiki-rs"
repository = "https://github.com/chipsenkbeil/vimwiki-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"

[features]
default = []
html = ["vimwiki-core/html"]
macros = ["vimwiki_macros"]
timekeeper = ["vimwiki-core/timekeeper"]

[dependencies]
vimwiki-core = { version = "=0.1.0", path = "../vimwiki-core" }
vimwiki_macros = { version = "=0.1.0", path = "../vimwiki_macros", optional = true }
