[package]
name = "vimwiki_macros"
version = "0.1.0"
authors = ["Chip Senkbeil <chip@senkbeil.org>"]
edition = "2018"

[lib]
proc-macro = true
name = "vimwiki_macros"

[dependencies]
proc-macro2 = { version = "1.0", features = [ "span-locations" ] }
quote = "1.0"
vimwiki = { version = "0.1.0", path = "../vimwiki" }
