[package]
name = "vimwiki_macros"
description = "Macro library that provides macros to generate vimwiki language at compile time."
categories = ["parser-implementations"]
version = "0.1.0-alpha.6"
authors = ["Chip Senkbeil <chip@senkbeil.org>"]
edition = "2018"
homepage = "https://github.com/chipsenkbeil/vimwiki-server"
repository = "https://github.com/chipsenkbeil/vimwiki-server"
readme = "README.md"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true
name = "vimwiki_macros"

[dependencies]
lazy_static = "1.4.0"
paste = "1.0"
proc-macro2 = { version = "1.0", features = [ "span-locations" ] }
quote = "1.0"
regex = "1.4.6"
syn = "1.0.70"
vimwiki = { version = "0.1.0-alpha.6", path = "../vimwiki" }
