[package]
name = "vimwiki_server"
description = "Daemon that supports parsing and modifying vimwiki files."
categories = ["web-programming::http-server"]
version = "0.1.0-alpha.1"
authors = ["Chip Senkbeil <chip@senkbeil.org>"]
edition = "2018"
homepage = "https://github.com/chipsenkbeil/vimwiki-server"
repository = "https://github.com/chipsenkbeil/vimwiki-server"
readme = "README.md"
license = "MIT OR Apache-2.0"

[lib]
name = "vimwiki_server"
path = "src/lib.rs"

[[bin]]
name = "vimwiki-server"
path = "src/main.rs"

[features]
default = ["cli", "watch", "web"]
cli = ["clap"]
watch = ["notify"]
web = ["juniper_warp", "warp"]

[dependencies]
juniper = "0.14.2"
serde_json = "1.0.57"
vimwiki = { version = "0.1.0-alpha.1", path = "../vimwiki" }
clap = { version = "3.0.0-beta.1", optional = true }
notify = { version = "5.0.0-pre.3", optional = true }
juniper_warp = { version = "0.5.2", optional = true }
warp = { version = "0.2.4", optional = true }

[dependencies.tokio]
version = "0.2.22"
features = ["rt-core", "time", "io-std", "io-util", "macros"]
