[package]
name = "vimwiki-server"
description = "Daemon that supports parsing and modifying vimwiki files."
categories = ["web-programming::http-server"]
version = "0.1.0-alpha.1"
authors = ["Chip Senkbeil <chip@senkbeil.org>"]
edition = "2018"
homepage = "https://github.com/chipsenkbeil/vimwiki-server"
repository = "https://github.com/chipsenkbeil/vimwiki-server"
readme = "README.md"
license = "MIT OR Apache-2.0"

[lib]
name = "vimwiki_server"
path = "src/lib.rs"

[[bin]]
name = "vimwiki-server"
path = "src/main.rs"

[dependencies]
async-graphql = "2.0.0-alpha.19"
async-graphql-warp = "2.0.0-alpha.19"
clap = { version = "3.0.0-beta.1" }
notify = { version = "5.0.0-pre.3" }
tokio = { version = "0.2.22", features = ["full"] }
vimwiki = { version = "0.1.0-alpha.1", path = "../vimwiki" }
vimwiki_macros = { version = "0.1.0-alpha.1", path = "../vimwiki_macros" }
warp = { version = "0.2.5" }
