[package]
name = "vimwiki-server"
description = "Daemon that supports parsing and modifying vimwiki files."
categories = ["web-programming::http-server"]
version = "0.1.0-alpha.1"
authors = ["Chip Senkbeil <chip@senkbeil.org>"]
edition = "2018"
homepage = "https://github.com/chipsenkbeil/vimwiki-server"
repository = "https://github.com/chipsenkbeil/vimwiki-server"
readme = "README.md"
license = "MIT OR Apache-2.0"

[lib]
name = "vimwiki_server"
path = "src/lib.rs"

[[bin]]
name = "vimwiki-server"
path = "src/main.rs"

[dependencies]
async-graphql = "2.0.0-alpha.20"
async-graphql-warp = "2.0.0-alpha.20"
clap = "3.0.0-beta.2"
derive_more = { version = "0.99.0", default-features = false, features = [ "display", "error", "from" ] }
indicatif = "0.15.0"
log = "0.4.11"
notify = "5.0.0-pre.3"
pretty_env_logger = "0.4.0"
serde_json = "1.0.58"
tokio = { version = "0.2.22", features = ["full"] }
vimwiki = { version = "0.1.0-alpha.1", path = "../vimwiki" }
vimwiki_macros = { version = "0.1.0-alpha.1", path = "../vimwiki_macros" }
walkdir = "2.3.1"
warp = "0.2.5"
